MAINT(ignore): Jest and Yarn generated files removed/ignored from repository. Modified various components and added test files.

--- a/package.json
+++ b/package.json
@@ -3,24 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "husky": "0.14.3",
-    "jest-enzyme": "^4.2.0",
-    "lint-staged": "7.0.0",
-    "node-sass-chokidar": "0.0.3",
+    "lint-staged": "7.0.4",
+    "node-sass-chokidar": "1.2.2",
     "npm-run-all": "4.1.2",
     "prettier": "1.11.1",
-    "react-scripts": "1.1.0",
+    "react-scripts": "1.1.4",
     "react-test-renderer": "^16.2.0"
   },
   "dependencies": {
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-instantsearch": "^4.5.1",
-    "react-instantsearch-theme-algolia": "^4.5.1",
-    "react-redux": "5.0.6",
-    "react-router-dom": "^4.2.2",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "react-instantsearch": "5.0.3",
+    "react-instantsearch-theme-algolia": "4.5.2",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.2.2",
     "redux": "3.7.2"
   },
   "scripts": {
@@ -43,7 +40,7 @@
     ]
   },
   "jest": {
-    "collectCoverageFrom" : [
+    "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!<rootDir>/node_modules/",
       "!<rootDir>/build/"
