--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "lint-staged": "7.0.4",
     "node-sass-chokidar": "1.2.2",
     "npm-run-all": "4.1.2",
-    "prettier": "1.11.1",
+    "prettier": "^1.11.1",
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.2.0"
   },
   "dependencies": {
+    "global": "^4.3.2",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-instantsearch": "5.0.3",
@@ -24,8 +25,7 @@
     "precommit": "lint-staged",
     "prestart": "HTTPS=true",
     "start": "npm-run-all -p watch:css watch:js",
-    "test": "echo hello",
-    "actual-test": "react-scripts test --env=jsdom --coverage",
+    "test": "react-scripts test --env=jsdom --coverage",
     "watch:css": "npm run build:css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "watch:js": "react-scripts start",
     "build:css": "node-sass-chokidar src/ -o src/",
