--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "husky": "0.14.3",
+    "jest-enzyme": "^6.0.0",
     "lint-staged": "7.0.4",
     "node-sass-chokidar": "1.2.2",
     "npm-run-all": "4.1.2",
