--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,21 +3,15 @@ phases:
     install:
         commands:
             # Yarn installation
-            - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-            - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-            - sudo apt-get -y update
-            - apt-get install -y yarn
-            - yarn -v
-            # Installing dependencies
-            - yarn install
+            - npm install
     pre_build:
         commands:
             # Run Automated Tests
-            - yarn test
+            - npm test
     build:
         commands:
             # Build Application
-            - yarn build
+            - npm run build
 
 artifacts:
     files:
