--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,6 @@ phases:
             - npm run build
 
 artifacts:
-    files:
-        - **/*
-    base-directory: 'build*'
+  files:
+    - '**/*'
+  base-directory: 'my-build*'
